--- a/modules/gui/qt/Makefile.am
+++ b/modules/gui/qt/Makefile.am
@@ -140,6 +140,8 @@ libqt_plugin_la_SOURCES = \
 	gui/qt/components/playlist/standardpanel.hpp \
 	gui/qt/components/playlist/playlist.cpp \
 	gui/qt/components/playlist/playlist.hpp \
+	gui/qt/components/newplaylist/playlist.cpp \
+	gui/qt/components/newplaylist/playlist.hpp \
 	gui/qt/components/playlist/plmodel.cpp \
 	gui/qt/components/playlist/plmodel.hpp \
 	gui/qt/components/playlist/plitem.cpp \
